RESOLVED FIXED207820
[LFC] A box establishing an independent formatting context is not a float avoider
https://bugs.webkit.org/show_bug.cgi?id=207820
Summary [LFC] A box establishing an independent formatting context is not a float avo...
alan
Reported 2020-02-15 17:44:37 PST
While the the formatting context does not inherit the parent's floating context so the box's content ignores the floats, the box itself does not avoid it (aka its position is independent of the floats in the same context).
Attachments
Patch (1.90 KB, patch)
2020-02-15 17:48 PST, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2020-02-15 17:44:52 PST
alan
Comment 2 2020-02-15 17:48:50 PST
alan
Comment 3 2020-02-16 07:18:59 PST
Note You need to log in before you can comment on or make changes to this bug.