[LFC] A box establishing an independent formatting context is not a float avoider https://bugs.webkit.org/show_bug.cgi?id=207820 <rdar://problem/59490056>

Reviewed by Antti Koivisto.

Since the independent formatting context does not inherit the parent's floating context,
the box's content essentially ignores the floats and the box itself does not avoid them either
(aka its position is independent of the floats in the same context).

* layout/layouttree/LayoutBox.cpp:
(WebCore::Layout::Box::isFloatAvoider const):


Canonical link: https://commits.webkit.org/220777@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256709 268f45cc-cd09-0410-ab3c-d52691b4dbfc